--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
 <html>
 	<head>
 		<title>CSE & Design Project</title>
+		
+		
 		<script src="https://d3js.org/d3.v4.min.js"></script>
+		
+		
 		<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+		
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+        <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+
 		<style>
 			text{
 				font-family: "Helvetica Neue", Helvetica, sans-seif;
@@ -17,10 +29,40 @@
 			h1{
 				color: white;
 				font-family: 'Permanent Marker', cursive;
+				margin-top:3%;
+				margin-left:5%;
+			}
+			h2{
+				color: white;
+				font-family: 'Permanent Marker', cursive;
+				margin-top:3%;
+				margin-left:74%;
 			}
 			body{
 				background-color: black;
 			}
+			.leaflet-control-attribution a {
+                color: blue !important;
+                font-family: "Courier New", Courier, monospace !important;
+			}
+			.leaflet-control-zoom-out, .leaflet-control-zoom-in {
+                color: gray !important;
+                font-family: "Courier New", Courier, monospace !important;
+			}
+			a:link {
+				color: white; 
+				font-family: 'Permanent Marker', cursive;
+				margin-top:3%;
+				margin-left:5%;
+			}
+
+			a:visited {
+				color: white;
+				font-family: 'Permanent Marker', cursive;
+				margin-top:3%;
+				margin-left:5%;
+			}
+			
 		</style>
 		<link rel="shortcut icon" href="#" />
 	</head>
@@ -30,9 +72,20 @@
 		<h1>
 		Franklin County Graduation Rate by School District
 		</h1>
+		
+		<!-- this div contains everything related to map -->
+        <div id='map' style="height: 75.5%;width: 50.9%; border: 1px solid black; margin-left:7%"></div>
+        <div id='rbarchart' style="height: 75.5%; width:49.1%; position:absolute; margin-top:-35%; margin-left:50%"></div>
 
 		<!-- load/run js file --> 
 		<script type="text/javascript" src="js/rbarchart.js"></script>
+		<script type="text/javascript" src="js/map_colour.js"></script>
+		<h2>Graduation Rate</h2>
+		
+		<h1> <u>Data </u></h1>
+		<a href="http://webapp2.ode.state.oh.us/similar_districts/raw_data.asp">(Raw) Distict Data</a>
+		<a href="http://reportcard.education.ohio.gov/Pages/Download-Data.aspx">(Raw) Ohio School Report Card</a>
+		<a href="https://github.com/TheAnig/columbus-city-school-analysis/blob/master/data/school-data.csv">Our Data</a>
 		
 	</body> 
 </html>
