--- a/index.html
+++ b/index.html
@@ -55,14 +55,24 @@
 				margin-top:3%;
 				margin-left:5%;
 			}
-
 			a:visited {
 				color: white;
 				font-family: 'Permanent Marker', cursive;
 				margin-top:3%;
 				margin-left:5%;
 			}
-			
+			.legend{ 
+				text-align: left; 
+				line-height: 18px; 
+				color: #555; 
+			} 
+			.legend i { 
+				width: 18px; 
+				height: 18px; 
+				float: left; 
+				margin-right: 
+				8px; opacity: 0.7; 
+			}
 		</style>
 		<link rel="shortcut icon" href="#" />
 	</head>
