playing with map height

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 				color: white;
 				font-family: 'Permanent Marker', cursive;
 				margin-left:73%;
+				margin-top: -1%;
 			}
 			body{
 				background-color: black;
@@ -107,7 +108,7 @@
 		</h1>
 		
 		<!-- this div contains everything related to map -->
-        <div id='map' style="height: 82%;width: 50.9%; border: 1px solid black; margin-left:7%"></div>
+        <div id='map' style="height: 84%;width: 50.9%; border: 1px solid black; margin-left:7%"></div>
         <div id='rbarchart' style="height: 77%; width:49.1%; position:absolute; margin-top:-35%; margin-left:53%"></div>
 
 		<!-- load/run js file --> 
